overlapping headers fixed

--- a/app/assets/stylesheets/games/show.scss
+++ b/app/assets/stylesheets/games/show.scss
@@ -5,6 +5,10 @@ table {
   border-collapse: collapse;
 }
 
+.top-50px {
+  top: 50px;
+}
+
 .kana-box {
   font-size: 14px;
 }
